⚙ fixed some problems ( overflow and slider )

--- a/src/App.css
+++ b/src/App.css
@@ -60,13 +60,23 @@ h1.title span{
 p{
   color: #555;
 }
+p span{
+  font-weight: 500;
+  color: var(--orange);
+  text-transform: capitalize;
+}
 /* container  */
 .container{
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
+  position: relative;     
+}
+@media (max-width:767px){
+  .container{
+      overflow-x: hidden;
+  }
 }
 @media (min-width:768px){
   .container{
@@ -83,6 +93,11 @@ p{
       width: 1170px;
   }
 }
+@media (min-width:1400px){
+  .container{
+      width: 1260px;
+  }
+}
 /* the navbar  */
 .nav-bar{
   display: flex;
@@ -97,6 +112,7 @@ p{
   align-items: center;
   justify-content: space-between;
   gap: 48px;
+  transition: 1s;
 }
 .nav-bar ul li{
   position: relative;
@@ -130,61 +146,72 @@ p{
   display: none;
 }
 @media (max-width:768px){
+
   .nav-bar .menu-icon{
-    display: block;
-    font-size: 1.8rem;
-    transition: .3s;
-    color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
     cursor: pointer;
   }
-  .nav-bar .menu-icon.clicked{
-    color: var(--orange);
+  .nav-bar .menu-icon div{
+    width: 100%;
+    height: 4px;
+    background-color: #555;
+    border-radius: 10px;
+    transition: .3s;
+  }
+  .nav-bar .menu-icon div:nth-child(3){
+    width: 50%;
+  }
+  .nav-bar .menu-icon.clicked div{
+    background-color: var(--orange);
+  }
+  .nav-bar .menu-icon.clicked div:nth-child(3){
+    width: 100%;
   }
   .nav-bar ul{
     display: none;
   }
-  .nav-bar .menu-icon.clicked + ul{
-    display:block;
+  .nav-bar {
+    position: relative; 
+    z-index: 99;
   }
   .nav-bar .menu-icon.clicked + ul{
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 70px;
+    top: 80%;
     left: 0;
     width: 100%;
     background-color: white;
+    gap: 0;
     padding: 0;
     padding-bottom: 20px;
     text-align: center;
-    border-top: 1px solid #8f4e08;
   }
   .nav-bar .menu-icon.clicked + ul li{
     padding: 10px 0;
-    border-bottom: 1px solid var(--orange);
     width: 100%;
   }
+  
 
 }
 /* the welcome  */
-.welcome-cont{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: calc(100vh - 80px);
-}
 @media (max-width:768px){
-  .welcome-cont{
-    display: block;
-    height:fit-content;
-  }
   .welcome-cont .welcome .social-media{
     display: none;
   }
 }
+.welcome-cont{
+  padding: 80px 0;
+}
 .welcome{
   text-align: center;
-  padding: 20px;
+  padding: 0 20px;
+  position: relative;
 }
 .welcome h1{
   font-size: 4rem;
@@ -199,7 +226,7 @@ p{
   text-transform: capitalize;
 }
 .welcome h2 span{
-  font-weight: 500;
+  font-weight: 600;
 }
 .welcome p{
   font-size: 1.7rem;
@@ -207,6 +234,8 @@ p{
   color: #555;
   max-width: 50ch;
   margin-bottom: 60px;
+  text-align: center;
+  margin: 20px auto 60px;
 }
 .welcome a{
   font-size: 1.6rem;
@@ -282,9 +311,7 @@ p{
   align-items: center;
   justify-content: space-between;
   gap: 20px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  margin-bottom: 40px;
+  padding: 50px 0;
 }
 .what-is-estin .text{
   width: 50%;
@@ -346,9 +373,8 @@ p{
 }
 /* the studies  */
 .studies ,.info-sec{
-  padding: 16px 20px ;
-  min-height: 100vh;
-  margin-bottom: 60px;
+  padding: 16px 20px 50px;
+  position: relative;
 }
 .studies p.big-p{
   font-size: 1.6rem;
@@ -547,7 +573,7 @@ p{
 }
 /* the our clubs  */
 .our-clubs{
-  margin: 50px 0 80px;
+  padding: 50px 0;
 }
 
 .our-clubs p.desc{
@@ -565,8 +591,10 @@ p{
   .our-clubs .imgs-grid{
     margin: 80px 0;
     display: flex;
+    flex-direction: row;
     gap: 20px;
     align-items: center;
+    max-width: 100vw;
   }
   .our-clubs .imgs-grid .col{
     width: calc((100% - 40px) / 3);
@@ -580,22 +608,76 @@ p{
   .our-clubs p.desc{
     font-size: 1.2rem;
   }
-  .our-clubs .imgs-grid{
-    display: flex;
-    gap: 20px;
-    cursor: grab;
+ 
+ 
+   .our-clubs .slider {
+    height: 240px;
+    margin: 0;
+    position: relative;
+    width: 100%;
     margin-bottom: 60px;
   }
-  .our-clubs .imgs-grid .col{
-    display: flex;
-    gap: 20px;
-    width: fit-content;
+  .our-clubs .slider::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 40px;
+    background-image: linear-gradient(to right,  rgba(255,255,255,1) 0% ,rgba(255,255,255,0) 100%);;
+    top: 0;
+    left: -20px;
+    z-index: 2;
   }
-  .our-clubs .imgs-grid .col img{
-    height: 300px;
-    width: 350px;
-    border-radius: 2.6rem;
+  .our-clubs .slider::after{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 40px;
+    background-image: linear-gradient(to left,  rgba(255,255,255,1) 0% ,rgba(255,255,255,0) 100%);;
+    top: 0;
+    right: -20px;
+    z-index: 2;
+  }
+  
+  .our-clubs .slider .slide-track {
+    -webkit-animation: scroll 20s linear infinite;
+    animation: scroll 35s linear infinite;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: calc(250px * 6);
+  }
+  
+  .our-clubs .slider .slide {
+    height: 240px;
+    width: 300px;
+  }
+  
+  .slider .slide img {
+    width: inherit;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    flex: 1;
+    aspect-ratio: 1/1; 
     object-fit: cover;
+  }
+  
+  @-webkit-keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-250px * 7.5));
+    } 
+  }
+  
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-250px * 7.5));
+    }
   }
 }
 .our-clubs .clubs{
@@ -641,7 +723,7 @@ p{
 }
 /* hte events and workshops  */
 .our-events{
-  margin: 60px 0;
+  padding: 50px 0;
 }
 .our-events .events{
   margin-top: 30px;
@@ -655,11 +737,11 @@ p{
   display: flex;
   flex-direction: column;
   border-radius: 12px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 8px 6px 23px -1px rgba(61, 61, 61, 0.08);
   transition: .3s;
 }
 .our-events .events .event:hover{
-  box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 6px 23px -1px rgba(61, 61, 61, 0.2);
   transform: scale(1.01);
 }
 .our-events .events .event img{
@@ -681,13 +763,18 @@ p{
   .our-events h1{
     font-size: 1.5rem;
   }
+  .our-events .events{
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+  }
   .our-events .events .event{
-    width: 100%;
+    width: 95%;
   }
 }
 /* the life in campus  */
 .life-in-campus{
-  margin: 80px 0;
+  padding: 50px 0;
   position: relative;
 }
 .life-in-campus .campus-sec{
@@ -698,6 +785,7 @@ p{
   margin-bottom:80px ;
   gap: 40px;
   padding: 20px;
+
 }
 @media(max-width:768px){
   .life-in-campus .campus-sec{
@@ -728,7 +816,7 @@ p{
 }
 /* the join us  */
 .join-us{
-  margin: 100px 0;
+  padding: 50px 0;
   position: relative;
 }
 .join-us .join-us-cont{
@@ -775,7 +863,7 @@ p{
   align-items: center;
   justify-content: space-between;
   text-transform: capitalize;
-  padding-bottom: 40px;
+  padding: 60px 0 40px;
   position: relative;
 }
 @media(max-width:768px){
